# SmartTrader

./: .gitattributes  API_REFERENCE.md  CLEANUP_SUMMARY.md  DASHBOARD_TEST_REPORT.md  DASHBOARD_TEST_SUMMARY_FA.md  DOCKER.md  EXECUTIVE_SUMMARY.md  INSTALLATION.md  PROJECT_MANIFEST.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  START_HERE.md  STRUCTURE.md  TEST_REPORT_20260718.md  TEST_RESULTS_FINAL.md  Uplod file githup.py  docker-compose.yml  package-lock.json  pip_list.txt  run.bat  run.sh  setup.py  test_results_summary.txt  tmp_check_env.py  tmp_debug_mt5_service.py  tmp_enumerate_windows.py  tmp_findstr.txt  tmp_probe_mt5.py  tmp_run_tests.py
app/: .env  .env.example  Dockerfile  __init__.py  main.py  models.py  pyproject.toml  requirements.txt  run_backend.py  setup.py
app/api/: routes.py
app/api/v1/: __init__.py  data_management.py  settings.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  account_store.py  auth.py  capital_management.py  config.py  database.py  indicators.py  logger.py  models.py  mt5_service.py
app/data/: user_settings.json
app/db/: models.py
app/services/: __init__.py  data_archiver.py  indicator_calculator.py  ml_data_loader.py  mt5_data_extractor.py
app/smarttred_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/tests/: test_db_and_services.py
docs/: DEBUGGING.md  INDEX.md
logs/: api_export_response.json  api_login_response.json  api_timeframe_response.json  close_history.jsonl  export_check.json  last_token.txt  mt5_fix_summary.txt  mt5_symbols.txt
scripts/: README.md  run.bat  (+4 more)
(+75 files in other folders)
