[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smarttred-backend"
version = "0.1.0"
description = "Smart Tred FastAPI backend for MetaTrader5"
readme = "../README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "numpy<2",
    "MetaTrader5==5.0.47",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "cors==1.0.1",
    "httpx==0.25.2",
]

[tool.setuptools]
packages = ["app", "app.api", "app.config", "app.core", "app.utils"]
package-dir = {"app" = "."}
